[package]
name = "trie-generic"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "A trie with generic content"
readme = "Readme.md"
keywords = ["trie", "prefix", "generic"]
categories = ["data-structures", "compression", "algorithms"]
repository = "http://github.com/andrefs/trie-generic"





[dependencies]
